@@ -6,7 +6,7 @@
 
 pkgname=mercurial
 pkgver=1.3
-pkgrel=1
+pkgrel=2
 pkgdesc="A scalable distributed SCM tool"
 url="http://www.selenic.com/mercurial"
 license=("GPL")
@@ -26,8 +26,9 @@ build() {
     install -m644 -D contrib/bash_completion $startdir/pkg/etc/bash_completion.d/hg 
     install -d $startdir/pkg/usr/share/emacs/site-lisp
     install -m644 contrib/{mq.el,mercurial.el} $startdir/pkg/usr/share/emacs/site-lisp
-    vimpath="$pkgdir/usr/share/vim/vim72"
-    install -m644 -D contrib/vim/HGAnnotate.vim $vimpath/syntax/HGAnnotate.vim
+    
+    #vimpath="$pkgdir/usr/share/vim/vim72"
+    #install -m644 -D contrib/vim/HGAnnotate.vim $vimpath/syntax/HGAnnotate.vim
 
     # Autoloading plugins to vim = no good.  
     #  install -d $vimpath/plugin
