@@ -1,6 +1,10 @@
 
 2009-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>
 
+	* Removed vim files for mercurial.
+
+2009-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>
+
 	* Updated for x86_64: 1.3
 
 2009-03-21  Douglas Soares de Andrade  <douglas@archlinux.org>
